added side projects

--- a/src/template.html
+++ b/src/template.html
@@ -88,11 +88,8 @@
         </div>
       </div>
     </section>
-    <!-- /END About Section -->
+    <!-- /END About Section --!>
 
-    
-    
-  
     <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
@@ -100,6 +97,90 @@
           <h2 class="section-title dark-blue-text">
             Projects
           </h2>
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Billionare Circle Flutter</h3>
+                <div>
+                  <p class="mb-4">
+                    Simple side project paid app using flutter 
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/billionaire_circle">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/exhibition.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Mi Card Flutter - on going</h3>
+                <div>
+                  <p class="mb-4">
+                    Simple side project flutter app
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/my_card_flutter">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/exhibition.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Today's Quote React Native app</h3>
+                <div>
+                  <p class="mb-4">
+                    Today's Quote
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://relaxed-dijkstra-3ba967.netlify.app/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/todays-quote">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/quote.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Each .row is a project -->
           <div class="row">
@@ -124,36 +205,6 @@
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/exhibition.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Today's Quote app</h3>
-                <div>
-                  <p class="mb-4">
-                    Today's Quote
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://relaxed-dijkstra-3ba967.netlify.app/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/todays-quote">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/quote.png" />
                   </div>
                 </a>
               </div>
@@ -191,6 +242,36 @@
           </div>
           <!-- /END Project -->
 
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">ROBOFRIENDS APP</h3>
+                <div>
+                  <p class="mb-4">
+                   Robofriends app is using React.js.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/robofriends">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://ej-c.github.io/robofriends/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/robotfriends.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -243,36 +324,6 @@
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/carea.png" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">ROBOFRIENDS APP</h3>
-                <div>
-                  <p class="mb-4">
-                   Robofriends app is using React.js.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/robofriends">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://ej-c.github.io/robofriends/" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/robotfriends.png" />
                   </div>
                 </a>
               </div>
