--- a/src/template.html
+++ b/src/template.html
@@ -117,7 +117,7 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/exhibition.jpg" />
+                    <img class="img-fluid" src=""/>
                   </div>
                 </a>
               </div>
@@ -144,7 +144,7 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/exhibition.jpg" />
+                    <img class="img-fluid" src=""/>
                   </div>
                 </a>
               </div>
@@ -162,8 +162,8 @@
                     Today's Quote
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://relaxed-dijkstra-3ba967.netlify.app/">
-                  See Live
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://play.google.com/store/apps/details?id=com.caydenvove.todaysquoteapp">
+                  Go to Appstore
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/todays-quote">
                   Source Code
