--- a/src/template.html
+++ b/src/template.html
@@ -117,7 +117,7 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src=""/>
+                    <img class="img-fluid" src="./assets/bill.png"/>
                   </div>
                 </a>
               </div>
@@ -144,7 +144,7 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src=""/>
+                    <img class="img-fluid" src="./assets/quote.png"/>
                   </div>
                 </a>
               </div>
